<resources>
    <string name="app_name">SimuNade - ADS - 2021</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enade">Você sabe o que é o Enade?</string>
    <string name="sobre_o_enade_pt1">
        "O Exame Nacional de Desempenho dos Estudantes (Enade) avalia o rendimento dos
        concluintes dos cursos de graduação em relação aos conteúdos programáticos
        previstos nas diretrizes curriculares dos cursos,o desenvolvimento de competências e
        habilidades necessárias ao aprofundamento da formação geral e profissional, e o nível
        de atualização dos estudantes com relação à realidade brasileira e mundial.
    </string>
    <string name="sobre_o_enade_pt2">
        Aplicado pelo Inep desde 2004, o Enade integra o Sistema Nacional de Avaliação da
        Educação Superior (Sinaes), composto também pela Avaliação de cursos de graduação
        e pela Avaliação institucional. Juntos eles formam o tripé avaliativo que permite
        conhecer a qualidade dos cursos e instituições de educação superior brasileiras. Os
        resultados do Enade, aliados às respostas do Questionário do Estudante, são insumos
        para o cálculo dos Indicadores de Qualidade da Educação Superior.
    </string>
    <string name="sobre_o_enade_pt3">
        A inscrição é obrigatória para estudantes ingressantes e concluintes habilitados de
        cursos de bacharelado e superiores de tecnologia vinculados às áreas de avaliação da
        edição. A situação de regularidade do estudante é registrada no histórico escolar.
    </string>
    <string name="text1">Texto I</string>
    <string name="text2">Texto II</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="finalizar">Finalizar</string>
    <string name="prox">Proximo</string>
    <string name="porque">PORQUE</string>
    <string name="enunciadoq2_pt4">A respeito dessas asserções, assinale a opção correta.</string>
    <string name="opcaq2">As asserções I e II são proposições verdadeiras, e a II é uma justificativa correta da I.</string>
    <string name="opcbq2">As asserções I e II são proposições verdadeiras, mas a II não é uma justi fi cati va correta da I.</string>
    <string name="opccq2">A asserção I é uma proposição verdadeira, e a II é uma proposição falsa.</string>
    <string name="opcdq2">A asserção I é uma proposição falsa, e a II é uma proposição verdadeira.</string>
    <string name="opceq2">As asserções I e II são proposições falsas.</string>
    <string name="q5">Questão 5</string>
    <string name="txtq5_t1">
        Segundo o Ministério da Saúde, em 2017 o Brasil registrou uma média nacional de 5,7 óbitos para
        100 mil habitantes. Na população indígena, foi registrado um número de óbitos três vezes maior que
        a média nacional – 15,2. Destes registros, 44,8% (aproximadamente, 6,8 óbitos), são suicídios de
        crianças e adolescentes entre 10 e 19 anos. Esses dados contrastam com o panorama nacional,
        em que o maior índice é entre adolescentes e adultos de 15 a 20 anos.
    </string>
    <string name="txtq5_t2">
        Evidências apontam que, em determinadas minorias étnico-raciais, como os indígenas (aborígines ou
        populações nati vas), o suicídio entre crianças apresenta taxas bem mais elevadas do que as observadas
        na população geral. No Brasil, o enforcamento foi uti lizado mais frequentemente entre indígenas do que
        entre não indígenas, não se observando, no primeiro grupo, suicídios por intoxicação ou por armas de
        fogo. O mapa a seguir apresenta a distribuição dos óbitos por suicídio entre crianças e adolescentes
        indígenas no Brasil, entre os anos de 2010 e 2014.
    </string>
    <string name="fonteq5_txt1">
        Disponível em: htt ps://www.cvv.org.br/blog/o-suicidio-do-povo-indigena/. Acesso em: 30 de abr. 2020 (adaptado).
    </string>
    <string name="fonteq5_txt2">
        SOUZA, M. Mortalidade por suicídio entre crianças indígenas no Brasil. Caderno de Saúde Pública, v.35, Rio de Janeiro, 2019 (adaptado).
    </string>
    <string name="enunciadoq5_pt1">
        Considerando as informações apresentadas e o alto índice de suicídio da população indígena, avalie as
        afirmações a seguir.
    </string>
    <string name="enunciadoq5_pt2">
        I. O elevado índice de suicídios entre crianças e adolescentes indígenas no país evidencia a
        necessidade de ações com foco nos direitos fundamentais desses indivíduos.
    </string>
    <string name="enunciadoq5_pt3">II. Os estados do Pará e de Tocanti ns são os que possuem os maiores índices de suicídio de indígenas
na faixa etária de 10 a 14 anos.</string>
    <string name="enunciadoq5_pt4">III. Os povos das tribos originárias do Brasil, no que tange a sua história e preservação cultural,
não estão amparados por direitos e garantias constitucionais.</string>
    <string name="enunciadoq5_pt5">IV. O estabelecimento de ações preventi vas ao suicídio nas comunidades indígenas deve considerar
os elementos globais que afetam a população em geral, na faixa etária entre 15 e 20 anos.</string>
    <string name="enunciadoq5_pt6">É correto apenas o que se afi rma em</string>
    <string name="opcaq5">I.</string>
    <string name="opcbq5">II.</string>
    <string name="opccq5"> I e III.</string>
    <string name="opcdq5">II e IV.</string>
    <string name="opceq5">III e IV.</string>
    <string name="q6">Questão 6</string>
    <string name="txtq6">
        A pandemia ocasionada pelo novo Coronavírus gerou impactos negati vos na economia e nos negócios,
        intensifi cando problemas sociais no mundo todo. Nos Estados Unidos, um estudo realizado com a
        parceria de duas importantes universidades verifi cou que a expectati va de vida dos norte-americanos
        caiu 1,1 ano em 2020. A nova expectati va é de 77,4 anos. De acordo com o estudo, esta foi a maior queda
        anual da expectati va de vida já registrada nos últi mos 40 anos. O declínio é ainda maior se considerada a
        expectati va de vida para negros que moram no país, cuja queda foi de 2,1 anos. Para a população lati na,
        essa queda foi de 3 anos. O declínio na expectati va de vida dos lati nos é signifi cati vo, uma vez que eles
        apresentam menor incidência de condições crônicas que são fatores de risco para a Covid-19 em relação
        às populações de brancos e negros.
    </string>
    <string name="fonteq6">LOUREIRO, R. Covid-19 reduz gravemente expectativa de vida de negros e latinos nos EUA. Revista Exame, 2021 (adaptado).</string>
    <string name="enunciadoq6_pt1">
        Considerando as informações apresentadas no texto, avalie as asserções a seguir e a relação proposta
        entre elas.
    </string>
    <string name="enunciadoq6_pt2">
        I. O efeito desproporcional da pandemia da Covid-19 na expectati va de vida da população negra e
        latino-americana estabelece relação com sua situação de vulnerabilidade social.
    </string>
    <string name="enunciadoq6_pt3">
        II. Uma hipótese que pode ser levantada quanto à diminuição da expectati va de vida de negros e
        lati no-americanos está relacionada às suas precárias condições de trabalho, levando-os a maior
        possibilidade de exposição ao contágio pelo novo Coronavírus.
    </string>
    <string name="q7">Questão 7</string>
    <string name="txtq7_pt1">
        O estudo Internet and American Life Project , do Pew Research Center , demonstrou que, em 2009,
        metade das buscas de temas relacionados à saúde na internet era feita para terceiros, e quase seis em
        cada dez pessoas que usaram meios digitais para se informar sobre saúde mudaram o enfoque com que
        cuidavam da própria saúde ou da de algum parente. Esti ma-se que exista uma correlação positi va entre o
        grau de conhecimento das doenças (seus fatores de risco, formas de prevenção e tratamento) e a taxa de
        adoção de hábitos saudáveis pela sociedade. O aumento nos diagnósti cos precoces do câncer de mama
        e a diminuição do tabagismo são dois exemplos clássicos a favor dessa ideia. Acredita-se que indivíduos
        mais bem informados aderem a comportamentos preventi vos e reagem melhor a uma enfermidade.
    </string>
    <string name="txtq7_p2">
        Infelizmente, a divulgação de temas médicos é uma faca de dois gumes: quem não sabe nada está mais
        perto da verdade do que a pessoa cuja mente está cheia de informações equivocadas. Conseguir que
        a mensagem seja bem decodifi cada pelos receptores é o grande desafi o que preocupa (ou deveria
        preocupar) tanto médicos quanto jornalistas.
    </string>
    <string name="txtq7_pt2">
        De acordo com os dados da últi ma TIC Domicílios — pesquisa realizada anualmente com o objeti vo de
        mapear formas de uso das tecnologias de informação e comunicação no país —, aproximadamente
        46% dos usuários de Internet no Brasil uti lizam a rede à procura de informações médicas sobre saúde em
        geral e serviços de saúde. Para uma médica e pesquisadora da Fiocruz, os indivíduos sempre procuraram
        informações sobre seu estado de saúde, mas é inegável que o surgimento da Internet trouxe um aumento
        signifi cati vo do acesso a informações amplifi cando assim os refl exos deste processo e alterando a relação
        entre os indivíduos. A pesquisadora chama a atenção para o perigo do autodiagnósti co e da automedicação,
        que podem gerar consequências nefastas tanto para os indivíduos quanto para a saúde pública, uma vez
        que boa parte dos estudos mostra que não são adotados critérios durante as buscas na Internet.
    </string>
    <string name="fonteq7_txt1">
        TABAKMAN, R. A saúde na mídia : medicina para jornalistas, jornalismo para médicos. Trad. Lizandra Magon de Almeida.
        São Paulo: Summus Editorial, 2013 (adaptado).
    </string>
    <string name="fonteq7_txt2">Disponível em: htt ps://agencia.fi ocruz.br/conteudos-sobre-saude-na-web-alteram-relacao-medico-paciente. Acesso em: 16 abr. 2020 (adaptado).</string>
    <string name="enunciadoq7_pt1">Considerando a abordagem dos textos, avalie as afi rmações a seguir.</string>
    <string name="enunciadoq7_pt2">
        I. Os textos I e II evidenciam a importância de critérios nas buscas realizadas pelos usuários da
        Internet por informações sobre patologias, pois algumas informações podem trazer riscos à saúde
        por fomentarem a compreensão equivocada de sintomas e profi laxias.
    </string>
    <string name="enunciadoq7_pt3">
        II. O texto I afi rma que a disponibilização de informações sobre temas de saúde nos meios de
        comunicação tem contribuído para o esclarecimento da população acerca de hábitos saudáveis.
    </string>
    <string name="enunciadoq7_pt4">
        III. No texto II, defende-se o acesso a informações relati vas a pesquisas da área da saúde nos veículos
        de comunicação, pois elas permitem que o indivíduo seja proati vo na prevenção de patologias.
    </string>
    <string name="enunciadoq7_pt5">É correto o que se afirma em</string>
    <string name="opcaq7">I, apenas.</string>
    <string name="opcbq7">III, apenas.</string>
    <string name="opccq7">I e II, apenas.</string>
    <string name="opcdq7">II e III, apenas.</string>
    <string name="opceq7">I, II e III.</string>
</resources>