<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Q5Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_anterior"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="v"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/cinco"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_q6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/seis"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_q7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/sete"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_prox"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text=">"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/text1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtq5_t1"
            android:layout_marginTop="15dp"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:background="@color/cinza_claro"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fonteq5_txt1"
            android:layout_marginTop="10dp"
            android:textSize="8dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/text2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtq5_t2"
            android:layout_marginTop="15dp"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:background="@color/cinza_claro"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/questao5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fonteq5_txt2"
            android:layout_marginTop="10dp"
            android:textSize="8dp"
            android:layout_marginLeft="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/laranja_forte"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq5_pt1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq5_pt2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq5_pt3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq5_pt4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq5_pt5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq5_pt6" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opcaq5" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opcbq5" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opccq5" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opcdq5" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opceq5" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_finalizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:text="@string/finalizar" />

            <Button
                android:id="@+id/bt_proxima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prox" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>