<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Questao7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q7"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_anterior"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/anterior"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/sete"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_q2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/oito"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_q3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/nove"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_prox"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/proximo"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/text1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/cinza_claro"
            android:padding="5dp"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtq7_pt1"
                android:layout_marginBottom="5dp"
                android:textSize="15dp"
                android:background="@color/cinza_claro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtq7_p2"
                android:layout_marginTop="0dp"
                android:textSize="15dp"
                android:background="@color/cinza_claro" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fonteq7_txt1"
            android:layout_marginTop="10dp"
            android:textSize="8dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/text2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtq7_pt2"
            android:layout_marginTop="15dp"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:background="@color/cinza_claro"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fonteq7_txt2"
            android:layout_marginTop="10dp"
            android:textSize="8dp"
            android:layout_marginLeft="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/laranja_forte"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq7_pt1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq7_pt2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq7_pt3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq7_pt4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enunciadoq7_pt5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opcaq7" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opcbq7" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opccq7" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opcdq7" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/opceq7" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_finalizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:text="@string/finalizar" />

            <Button
                android:id="@+id/bt_proxima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prox" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>